--- a/src/app/feature/employees/components/employee-list/employee-list.component.html
+++ b/src/app/feature/employees/components/employee-list/employee-list.component.html
@@ -1,1 +1,47 @@
-<p>employee-list works!</p>
+
+<div class="w-full flex justify-between rounded-xl px-10 bg-black py-3 mt-10 ">
+  <div>
+  <input
+    class="bg-zinc-200 text-zinc-600 font-mono ring-1 ring-zinc-400 focus:ring-2 focus:ring-red-600 outline-none duration-300 placeholder:text-zinc-600 placeholder:opacity-50 rounded-full px-4 py-2 shadow-md focus:shadow-lg focus:shadow-red-600 dark:shadow-md dark:shadow-rose-500"
+    autocomplete="off"
+    placeholder="Search here..."
+    name="text"
+    type="text"
+  />
+  <!-- <span class="rounded-full bg-zinc-200 text-zinc-600 font-mono ring-1 ring-zinc-400 focus:ring-2 focus:ring-red-600 outline-none duration-300 placeholder:text-zinc-600 placeholder:opacity-50  px-2 py-2 rotate-[45deg] ml-2 shadow-md focus:shadow-lg focus:shadow-rose-400 dark:shadow-md dark:shadow-purple-500">
+    <i class="fas fa-search"></i>
+  </span> -->
+</div>
+  <div>
+    <button routerLink="/employees/add" class="px-4 py-2 text-black border-2 border-white  bg-white flex space-x-2 rounded-full text-sm shadow hover:bg-gray-900 hover:text-white ease-in-out duration-300 active:scale-75" >
+      <svg
+          class="w-6 h-6"
+          stroke="currentColor"
+          stroke-width="1.5"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
+            stroke-linejoin="round"
+            stroke-linecap="round"
+          ></path>
+        </svg>
+        <span>Add Employee</span> 
+      </button>
+    </div>
+</div>
+  <div *ngFor="let employee of employees" class="grid gap-8 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+    <app-employee-card [employee]="employee" />
+  </div>
+
+
+
+
+
+
+
+
+
+
