--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -1,4 +1,5 @@
-<div class="[--clr:#1f1f1f] dark:[--clr:#999999] relative flex flex-row items-center w-full">
+
+<div class=" relative flex flex-row items-center w-full">
     <!-- Input Field -->
     <input
       [type]="type"
@@ -6,21 +7,20 @@
       [id]="name"
       [placeholder]="placeholder"
       [value]="value"
-      [required]="required"
       spellcheck="false"
       autocomplete="off"
-      class="peer text-black dark:text-white pl-2 h-[40px] min-h-[40px] pr-[40px] leading-normal appearance-none resize-none box-border text-base w-full text-inherit block text-left border border-solid bg-white dark:bg-zinc-800 rounded-[10px] m-0 p-0 outline-0 focus-visible:outline-0 focus-visible:border-teal-500 focus-visible:outline-none focus-visible:ring-4 focus-visible:ring-[#71717a2e] dark:focus-visible:ring-[#14b8a61a]"
+      class="peer text-black pl-2 h-[40px] min-h-[50px] pr-[40px] leading-normal appearance-none resize-none box-border text-base w-full text-inherit block text-left border border-solid bg-white  rounded-[10px] m-0 p-0 outline-0 focus-visible:outline-0 focus-visible:border-gray-700 font-semibold focus-visible:outline-none focus-visible:ring-2"
     />
     <!-- Label -->
     <label
       [for]="name"
-      class="cursor-text text-[--clr] inline-block z-0 text-sm mb-px font-normal text-start select-none absolute duration-300 transform origin-[0] translate-x-[32px] peer-focus-visible:text-teal-500 peer-focus-visible:translate-x-[8px] peer-[:not(:placeholder-shown)]:translate-x-[8px] peer-focus-visible:translate-y-[-36px] peer-[:not(:placeholder-shown)]:translate-y-[-36px]"
+      class="cursor-text text-[--clr] inline-block z-0 text-sm mb-px  text-start select-none absolute duration-300 transform origin-[0] translate-x-[32px] peer-focus-visible:text-gray-700 font-semibold peer-focus-visible:translate-x-[8px] peer-[:not(:placeholder-shown)]:translate-x-[8px] peer-focus-visible:translate-y-[-36px] peer-[:not(:placeholder-shown)]:translate-y-[-36px]"
     >
       {{ label }}
     </label>
     <!-- Icon Placeholder -->
     <span
-      class="pointer-events-none absolute z-[+1] left-0 top-0 bottom-0 flex items-center justify-center size-[40px] text-[--clr] peer-focus-visible:hidden peer-[:not(:placeholder-shown)]:hidden"
+      class="pointer-events-none absolute z-[+1] left-0 top-1.5 bottom-0 flex items-center justify-center size-[40px] text-[--clr] peer-focus-visible:hidden peer-[:not(:placeholder-shown)]:hidden"
     >
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -40,7 +40,7 @@
     </span>
     <!-- Validation Feedback -->
     <div
-      class="group w-[40px] absolute top-0 bottom-0 right-0 flex items-center justify-center text-[--clr] peer-focus-visible:text-teal-600 peer-focus-visible:[&amp;_span]:border-teal-600"
+      class="group w-[40px] absolute top-0 bottom-0 right-0 flex items-center justify-center text-[--clr] peer-focus-visible:text-red-700 font-semibold peer-focus-visible:[&amp;_span]:border-gray-600"
     >
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -58,10 +58,7 @@
         <path d="M12 8v4"></path>
         <path d="M12 16h.01"></path>
       </svg>
-      <span *ngIf="required"
-        class="text-sm absolute cursor-default select-none rounded-[4px] px-1.5 opacity-0 right-0 -z-10 transition-all duration-300 group-hover:opacity-100 group-hover:-translate-y-[calc(100%+18px)]"
-        >Required!</span
-      >
+      
     </div>
   </div>
   
