--- a/src/app/feature/employees/components/employee-card/employee-card.component.html
+++ b/src/app/feature/employees/components/employee-card/employee-card.component.html
@@ -23,7 +23,7 @@
         <span class="font-medium">Hire Date:</span> {{employee.hireDate}}
       </p>
       <div class="mt-4 flex justify-center space-x-4">
-        <button class="px-4 py-2 text-white bg-blue-500 rounded-full text-sm shadow hover:bg-blue-600">View</button>
+        <button routerLink="/employees/edit/{{employee.id}}" class="px-4 py-2 text-white bg-blue-500 rounded-full text-sm shadow hover:bg-blue-600">update</button>
         <button class="px-4 py-2 text-white bg-red-500 rounded-full text-sm shadow hover:bg-red-600">Delete</button>
       </div>
     </div>
