--- a/src/app/shared/components/select-options/select-options.component.html
+++ b/src/app/shared/components/select-options/select-options.component.html
@@ -5,8 +5,7 @@
     <select
       [id]="name"
       [name]="name"
-      [required]="required"
-      class="block w-full mt-1 p-2 border border-gray-300 rounded-md shadow-sm focus:ring-teal-500 focus:border-teal-500 sm:text-sm"
+      class="block w-full mt-1 h-[50px] p-2 border border-gray-300 rounded-md shadow-sm focus:ring-teal-500 focus:border-teal-500 sm:text-sm"
     >
       <option *ngFor="let option of options" [value]="option.value">
         {{ option.label }}
