update employee EMA-6

--- a/src/app/feature/employees/components/employee-form/employee-form.component.html
+++ b/src/app/feature/employees/components/employee-form/employee-form.component.html
@@ -147,5 +147,11 @@
     >
       Submit
     </button>
+    <button
+    routerLink="/employees"
+      class="w-full bg-teal-500 text-white py-2 px-4 rounded hover:bg-teal-600 transition"
+    >
+      back
+    </button>
   </form>
 </div>
