delete an employee by id  EMA-10

--- a/src/app/feature/employees/components/employee-form/employee-form.component.html
+++ b/src/app/feature/employees/components/employee-form/employee-form.component.html
@@ -61,6 +61,20 @@
       </span>
     </div>
 
+    <div>
+      <label for="skills" class="block text-sm font-medium text-gray-700 mb-1">Skills:</label>
+      <input
+        id="skills"
+        type="text"
+        formControlName="skills"
+        [ngClass]="isFieldInvalid('skills') ? 'border-red-500' : 'border-gray-300'"
+        class="w-full border border-gray-300 p-2 rounded focus:ring-teal-500 focus:border-teal-500"
+      />
+      <span class="text-red-500 text-sm" *ngIf="getErrorMessage('skills')">
+        {{ getErrorMessage('skills') }}
+      </span>
+    </div>
+
     <!-- Salary -->
     <div>
       <label for="salary" class="block text-sm font-medium text-gray-700 mb-1">Salary:</label>
